Fixed bug with wrong types of a shift displaying wrong buttons
Fixed bug with wrong types of a shift displaying wrong buttons

--- a/src/main/resources/static/style/schedule.css
+++ b/src/main/resources/static/style/schedule.css
@@ -33,12 +33,10 @@ html, body {
     width: 100%;
     height: 5vh;
     line-height: 5vh;
-    /*color: white;*/
-    /*background-color: lightblue;
-    border: 2px solid lightgray;*/
     background-color: rgba(102, 183, 190, 0.8); /*#4ea2bd;*/
     font-weight: bold;
     text-align: center;
+    overflow: hidden;
 }
 
 .dayTop:hover {
